--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כאן בגטו]] [[אברהם הוסטל]] TLV [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כאן בגטו]] [[אכרם חומוס]] [[אברהם הוסטל]] TLV [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9620,7 +9620,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200223153107335" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200223161856215" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -9640,7 +9640,7 @@ well,
 
 </pre>
 </div>
-<div created="20191110123155001" modified="20200217150859261" tags="[[אחיות חוץ]] [[כאן בגטו]] [[מטא בדיון]] [[סיפורים אמיתיים]]" title="אהל היפה">
+<div created="20191110123155001" modified="20200223161251604" tags="[[אחיות חוץ]] [[כאן בגטו]] [[מטא בדיון]] [[סיפורים אמיתיים]] מוזיקה" title="אהל היפה">
 <pre>[img[pictures/ahal-eden.jpg]]
 
 !!![[תומר]]:
@@ -9648,6 +9648,9 @@ well,
 אהל היפה היא [[אהל עדן היפה|https://www.instagram.com/ahaleden/]] שגורה ציירה אותה בתמונה מהגב דווקא כי מי יכולה להיות עם [[הז'קט המושלם|https://en.wikipedia.org/wiki/Enter_the_Ninja]] באולם [[עוזי פרס ז&quot;ל|https://he.wikipedia.org/wiki/%D7%A2%D7%95%D7%96%D7%99_%D7%A4%D7%A8%D7%A1]], ולך תדע איזה דבר הכי שיש היא תעשה אחר כך - לפחות נתקלתי בה [[בכולי עלמא|כולי עלמא]] בהופעה של [[ג'אז|Jazz]], שהסתבר שהן משפחה, והיה לי העונג להתוודע אליה. אני קצת מאוהב, ואני חושב שהיא בהחלט אחת יחידה והכרחית כאן בגטו ולגטו שלנו המחייך.
 
 
+
+
+&lt;&lt;englink [[Beautiful Ahal]]&gt;&gt;
 
 </pre>
 </div>
@@ -10362,12 +10365,15 @@ well,
 
 </pre>
 </div>
-<div created="20190105113035895" modified="20190617132947864" tags="[[כאן בגטו]] [[חיות אוכל]] מסעדות מטבחים" title="אכרם חומוס">
+<div created="20190105113035895" modified="20200223161929726" tags="[[כאן בגטו]] [[חיות אוכל]] מסעדות מטבחים" title="אכרם חומוס">
 <pre>[img[pictures/acram-humus.jpg]]
 
 !!![[תומר]]:
 
 בירידה מרוטשילד, [[בשיינקין 59|https://www.google.co.il/maps/uv?hl=en&amp;pb=!1s0x151d4b7e8db95f5f:0x3662145826c17cb6!2m22!2m2!1i80!2i80!3m1!2i20!16m16!1b1!2m2!1m1!1e1!2m2!1m1!1e3!2m2!1m1!1e5!2m2!1m1!1e4!2m2!1m1!1e6!3m1!7e115!4shttps://lh5.googleusercontent.com/p/AF1QipMFFlj1e4GWNWYyh4WV9xERQb5ic8WeueoQwqki%3Dw213-h160-k-no!5z15DXm9eo150g15fXldee15XXoSAtIEdvb2dsZSBTZWFyY2g&amp;imagekey=!1e10!2sAF1QipMFFlj1e4GWNWYyh4WV9xERQb5ic8WeueoQwqki&amp;sa=X&amp;ved=2ahUKEwjRxtmgvtnfAhUNxxoKHTlkAUkQoiowCnoECAYQBg]], בבוקר, אכרם, חמודי וג'וני, לפעמים פוטנה גם, מחכים עם חיוך, עם החומוס, מרק חם, ופלאפל טוב, לדרים בסביבה וברחוב.
+
+
+&lt;&lt;englink [[Acram Hummus]]&gt;&gt;
 </pre>
 </div>
 <div created="20170331205112322" modified="20200213151435721" tags="[[אחות כהן]] [[ילדים חד הוריים]]" title="אלכסנדרה">
