--- a/english.html
+++ b/english.html
@@ -265,6 +265,8 @@ Error message and password prompt
 
 <li>Abraham Hostel</li>
 
+<li>Acram Hummus</li>
+
 <li>Alan Ball</li>
 
 <li>Alexander Technique</li>
@@ -288,6 +290,8 @@ Error message and password prompt
 <li>Ayala Malach Pines</li>
 
 <li>Baking</li>
+
+<li>Beautiful Ahal</li>
 
 <li>Berry Sakharof</li>
 
@@ -8630,7 +8634,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Abraham Hostel]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8917,6 +8921,20 @@ Two weeks before, my lovely wife bought for her and me tickets to a Kutiman show
 
 </pre>
 </div>
+<div created="20200223161655299" modified="20200223162925629" tags="[[Here in the Ghetto]] Restaurants Kitchens [[Food addicts]]" title="Acram Hummus">
+<pre>
+[img[pictures/acram-humus.jpg]]
+
+!!![[Tomer]]:
+
+Going down from Rothschild, at [[59 Sheinkin St|https://www.google.co.il/maps/uv?hl=en&amp;pb=!1s0x151d4b7e8db95f5f%3A0x3662145826c17cb6!3m1!7e115!4shttps%3A%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipMFFlj1e4GWNWYyh4WV9xERQb5ic8WeueoQwqki%3Dw213-h160-k-no!5z15DXm9eo150g15fXldee15XXoSAtIEdvb2dsZSBTZWFyY2g!15sCAQ&amp;imagekey=!1e10!2sAF1QipMFFlj1e4GWNWYyh4WV9xERQb5ic8WeueoQwqki&amp;sa=X&amp;ved=2ahUKEwjRxtmgvtnfAhUNxxoKHTlkAUkQoiowCnoECAYQBg]], in the morning Acram, Hamudi and Johnny, sometimes Futna too, welcome you with a smile, hummus, hot good soup and good falafel, for those who live in the street and around the block. 
+
+
+
+ &lt;&lt;heblink [[אכרם חומוס]]&gt;&gt;
+
+</pre>
+</div>
 <div created="20191113140946887" modified="20200216153058575" tags="[[outer sisters]] films tv [[tv series]]" title="Alan Ball">
 <pre>[img[pictures/alan-ball.jpg]]
 
@@ -9049,6 +9067,31 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 
 
  &lt;&lt;heblink [[אפייה]]&gt;&gt;</pre>
+</div>
+<div created="20200223155132460" modified="20200223161332160" tags="[[Here in the Ghetto]] Music [[Outer sisters]] Metafiction" title="Beautiful Ahal">
+<pre>
+[img[pictures/ahal-eden.jpg]]
+
+!!![[Tomer]]:
+
+Beautiful Ahal is the beautiful Ahal Eden that Gura painted from the back because who else can be with the perfect jacket at the descended Uzi Peres stadium, and what is the best thing she's gonna do afterwards- at least I bumped into her at the [[Kuli Alma]] at a Jazz concert, and turned out they're family, and I had the pleasure of getting to know her. I'm a little bit in love, and I definitely think she's one and only and necessary here in the ghetto and for our smiling ghetto.
+
+
+
+ &lt;&lt;heblink [[אהל היפה]]&gt;&gt;
+
+
+
+
+
+
+
+
+
+
+
+
+</pre>
 </div>
 <div created="20191113143329168" modified="20200216162219609" tags="music [[outer sisters]]" title="Berry Sakharof">
 <pre>[img[pictures/berry-sakharof.jpg]]
@@ -9685,7 +9728,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200223152927924" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200223161740692" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
