--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כאן בגטו]] [[אכרם חומוס]] [[אברהם הוסטל]] TLV [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כאן בגטו]] בארבי [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200223144013380" title="$:/temp/search">
+<div created="20161023184814872" modified="20200223162838081" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9620,7 +9620,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200223161856215" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200223163403088" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -10642,7 +10642,7 @@ well,
 
 נאדיה היא אשת עסקים מזן ה-K. היא נראית מבוגרת, ומתלבשת מבוגר וחום (פוליאסטר וטרילין), מתהדרת ביושר, בידע והבנת העולם. נשואה ובוגדנית.</pre>
 </div>
-<div created="20180825155311148" modified="20200217150936113" tags="מוזיקה [[כאן בגטו]] [[מטא בדיון]]" title="בארבי">
+<div created="20180825155311148" modified="20200223163442411" tags="מוזיקה [[כאן בגטו]] [[מטא בדיון]]" title="בארבי">
 <pre>[img[pictures/barby.jpg]]
 
 !!![[תומר]]: 
@@ -10651,7 +10651,7 @@ well,
 
 
 
-</pre>
+&lt;&lt;englink [[Barby]]&gt;&gt;</pre>
 </div>
 <div created="20170618162529875" modified="20200220174556715" tags="[[המטבח על פי ז'נבייב]] קפה" title="בבוקר">
 <pre>[img[pictures/genevieve-aruchat-boker.jpg]]
