--- a/english.html
+++ b/english.html
@@ -291,6 +291,8 @@ Error message and password prompt
 
 <li>Baking</li>
 
+<li>Barby</li>
+
 <li>Beautiful Ahal</li>
 
 <li>Berry Sakharof</li>
@@ -8634,7 +8636,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="Barby [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9067,6 +9069,23 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 
 
  &lt;&lt;heblink [[אפייה]]&gt;&gt;</pre>
+</div>
+<div created="20200223163123340" modified="20200223170136465" tags="[[Here in the Ghetto]] Music Metafiction" title="Barby">
+<pre>
+[img[pictures/barby.jpg]]
+
+
+!!![[Tomer]]:
+
+A week ago on Saturday I took a taxi to the Barby to see Jazz, my beloved neighbor, and it was a real musical abundance in a one night hip hop fest (this link to the article about the festival includes video clips from Yuval Erel, who loves and documents music). Jazz who is dear Yasmin, performed with a band called Shazamat, a great group of guys who sing and play beautifully and fun. They played very nicely a song of hers and a little bit later she performed with her own songs. It was awesome.
+
+
+
+
+
+ &lt;&lt;heblink [[בארבי]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20200223155132460" modified="20200223161332160" tags="[[Here in the Ghetto]] Music [[Outer sisters]] Metafiction" title="Beautiful Ahal">
 <pre>
@@ -9728,7 +9747,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200223161740692" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200223163202220" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -10632,7 +10651,7 @@ And tea is for the sicken ones.
  &lt;&lt;heblink [[מרק עם קניידלך]]&gt;&gt;
 </pre>
 </div>
-<div created="20200223150041518" modified="20200223152210190" tags="[[Here in the Ghetto]]" title="Max 20">
+<div created="20200223150041518" modified="20200223165644606" tags="[[Here in the Ghetto]]" title="Max 20">
 <pre>
 [img[pictures/max20.jpg]]
 
@@ -10641,7 +10660,7 @@ And tea is for the sicken ones.
 Max 20 at 147 Yehuda haLevi st is just like a private storeroom. I leave the building and walk up to haHashmonaim st, turn right, cross, walk down couple of steps, and I've  got anything I need at maximum 20 shekels.
 
 
- &lt;&lt;heblink [[max 20]]&gt;&gt;
+ &lt;&lt;heblink [[Max 20]]&gt;&gt;
 </pre>
 </div>
 <div created="20200222180211144" modified="20200222180600494" tags="[[I would like to apologize]] Laundry [[Dandan went]] [[True stories]]" title="Me writing">
