--- a/english.html
+++ b/english.html
@@ -487,9 +487,13 @@ Error message and password prompt
 
 <li>Kitchens</li>
 
+<li>Kuli Alma</li>
+
 <li>Laundry</li>
 
 <li>Lauryn Hill</li>
+
+<li>lechem-tushia Sheinkin</li>
 
 <li>Lehamim</li>
 
@@ -672,6 +676,8 @@ Error message and password prompt
 <li>The blue is already here</li>
 
 <li>The body updates</li>
+
+<li>The boulevard on the way home</li>
 
 <li>The Bridge</li>
 
@@ -8627,7 +8633,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200222180658130" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200223185420420" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8636,7 +8642,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Barby [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Beautiful Ahal]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8656,7 +8662,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200223152547483" title="$:/temp/search">
+<div created="20161023184814872" modified="20200223183231949" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8901,14 +8907,14 @@ In fact, when it comes to women I kinda dig the word woman.
 
  &lt;&lt;heblink [[גבר פריבילגי]]&gt;&gt;</pre>
 </div>
-<div created="20200223152720731" modified="20200223155006047" tags="[[Here in the Ghetto]]" title="Abraham Hostel">
+<div created="20200223152720731" modified="20200223185023384" tags="[[Here in the Ghetto]]" title="Abraham Hostel">
 <pre>
 [img[pictures/abraham-hostel.jpg]]
 
 !!![[Tomer]]:
 
 
-Two weeks before, my lovely wife bought for her and me tickets to a Kutiman show that took place in the end of July at Abraham Hostel, a place that I always like to visit. In real time she was too tired, and I immediately invited my beloved neighbor (excuse me for the name dropping), Yasmin, who performed there couple of months ago with Shalosh, to come with me, and she was available!! We took a taxi cuz it's hot, and it was hunky dory. 
+Two weeks before, my lovely wife bought for her and me tickets to a [[Kutiman|https://kutiman.bandcamp.com/]] show that took place in the end of July at [[Abraham Hostel|https://abrahamhostels.com/?gclid=EAIaIQobChMI_djYvui13QIVmKiaCh0GAAOpEAAYASAAEgISR_D_BwE]], a place that I always like to visit. In real time she was too tired, and I immediately invited my beloved neighbor (excuse me for the name dropping), [[Yasmin|Jazz]], who performed there couple of months ago with [[Shalosh|https://www.youtube.com/watch?v=ZamQEe7_hdQ]], to come with me, and she was available!! We took a taxi cuz it's hot, and it was hunky dory. 
 
 
 
@@ -9070,14 +9076,14 @@ A [[soul]] was born by her inspiration. May she rest in peace.
 
  &lt;&lt;heblink [[אפייה]]&gt;&gt;</pre>
 </div>
-<div created="20200223163123340" modified="20200223170136465" tags="[[Here in the Ghetto]] Music Metafiction" title="Barby">
+<div created="20200223163123340" modified="20200223184607859" tags="[[Here in the Ghetto]] Music Metafiction" title="Barby">
 <pre>
 [img[pictures/barby.jpg]]
 
 
 !!![[Tomer]]:
 
-A week ago on Saturday I took a taxi to the Barby to see Jazz, my beloved neighbor, and it was a real musical abundance in a one night hip hop fest (this link to the article about the festival includes video clips from Yuval Erel, who loves and documents music). Jazz who is dear Yasmin, performed with a band called Shazamat, a great group of guys who sing and play beautifully and fun. They played very nicely a song of hers and a little bit later she performed with her own songs. It was awesome.
+A week ago on Saturday I took a taxi to the [[Barby|https://www.barby.co.il/]] to see [[Jazz]], my beloved neighbor, and it was a real musical abundance in a [[one night hip hop fest|https://yuvalerel.com/2018/08/18/%d7%9e%d7%a1%d7%99%d7%91%d7%aa-%d7%94%d7%a9%d7%a7%d7%99%d7%a2%d7%94-%d7%a9%d7%9c-%d7%90%d7%9e%d7%a6%d7%a2-%d7%94%d7%9c%d7%99%d7%9c%d7%94/]] (this link to the article about the festival includes video clips from [[Yuval Erel|https://yuvalerel.com/]], who loves and documents music). Jazz who is dear Yasmin, performed with a band called [[Shazamat|https://www.youtube.com/watch?v=uWkQ_lFnKE4]], a great group of guys who sing and play beautifully and fun. They played very nicely a song of hers and a little bit later she performed with her own songs. It was awesome.
 
 
 
@@ -9087,13 +9093,13 @@ A week ago on Saturday I took a taxi to the Barby to see Jazz, my beloved neighb
 
 </pre>
 </div>
-<div created="20200223155132460" modified="20200223161332160" tags="[[Here in the Ghetto]] Music [[Outer sisters]] Metafiction" title="Beautiful Ahal">
+<div created="20200223155132460" modified="20200223185424389" tags="[[Here in the Ghetto]] Music [[Outer sisters]] Metafiction" title="Beautiful Ahal">
 <pre>
 [img[pictures/ahal-eden.jpg]]
 
 !!![[Tomer]]:
 
-Beautiful Ahal is the beautiful Ahal Eden that Gura painted from the back because who else can be with the perfect jacket at the descended Uzi Peres stadium, and what is the best thing she's gonna do afterwards- at least I bumped into her at the [[Kuli Alma]] at a Jazz concert, and turned out they're family, and I had the pleasure of getting to know her. I'm a little bit in love, and I definitely think she's one and only and necessary here in the ghetto and for our smiling ghetto.
+Beautiful Ahal is the beautiful [[Ahal Eden|https://www.instagram.com/ahaleden/]] that [[Gura]] painted from the back because who else can be with the [[perfect jacket|https://en.wikipedia.org/wiki/Enter_the_Ninja]] at the [[[descended Uzi Peres|https://www.imdb.com/name/nm0673366/]] stadium, and what is the best thing she's gonna do afterwards- at least I bumped into her at the [[Kuli Alma]] at a [[Jazz]] concert, and turned out they're family, and I had the pleasure of getting to know her. I'm a little bit in love, and I definitely think she's one and only and necessary here in the ghetto and for our smiling ghetto.
 
 
 
@@ -9747,7 +9753,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200223163202220" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200223183627180" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -10321,13 +10327,13 @@ The beloved [[James Gandolfini|https://www.imdb.com/name/nm0001254/]], who gave 
 
 </pre>
 </div>
-<div created="20200217150536703" modified="20200223145427644" tags="[[Outer sisters]] [[Here in the Ghetto]] Music [[Coen sister]] [[A friend]] [[How many songs can you even invent at all]]" title="Jazz">
+<div created="20200217150536703" modified="20200223182434364" tags="[[Outer sisters]] [[Here in the Ghetto]] Music [[Coen sister]] [[A friend]] [[How many songs can you even invent at all]]" title="Jazz">
 <pre>[img[pictures/jazz.jpg]]
 
 
 !!![[Tomer]]:
 
-Jazz is Yasmin Leselrot and she's a wonder. She fights for peace, equality and freedom and she's the purest love form there is. This is her singing with Brill, a member off [[Pele Ozen]].
+[[Jazz|https://karolina.bandcamp.com/album/karolina-with-echo-jazz-light-remixes-free-download]] is [[Yasmin Leselrot|https://www.youtube.com/watch?v=DUX9yPz-kvo]] and she's a wonder. She [[fights|https://www.youtube.com/watch?v=4Th-LcHpg2w]] for peace, equality and freedom and she's the [[purest|https://www.youtube.com/watch?v=7p9f8fK1VHA&amp;feature=youtu.be]] love form there is. This is her [[singing with Brill|https://www.youtube.com/watch?v=FhlLAqa5eq8]], a member off [[Pele Ozen]].
 
  &lt;&lt;heblink [[Jazz]]&gt;&gt;</pre>
 </div>
@@ -10459,6 +10465,17 @@ Another [[neighborhood luck|https://www.google.co.il/maps/uv?hl=iw&amp;pb=!1s0x1
  &lt;&lt;heblink [[מטבחים]]&gt;&gt;
 </pre>
 </div>
+<div created="20200223171627777" modified="20200223171918534" tags="[[Here in the Ghetto]] [[How many songs can you even invent at all]] Metafiction Music" title="Kuli Alma">
+<pre>
+[img[pictures/kuli-alma.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[כולי עלמא]]&gt;&gt;
+
+</pre>
+</div>
 <div created="20200212164125847" modified="20200212165652184" tags="Metafiction [[Here in the Ghetto]]" title="Laundry">
 <pre>[img[pictures/kevisa.jpg]]
 
@@ -10476,6 +10493,18 @@ Another [[neighborhood luck|https://www.google.co.il/maps/uv?hl=iw&amp;pb=!1s0x1
 
 
  &lt;&lt;heblink [[לורין היל]]&gt;&gt;
+</pre>
+</div>
+<div created="20200223182814598" modified="20200223183751405" tags="[[Here in the Ghetto]] Coffee Baking Metafiction" title="lechem-tushia Sheinkin">
+<pre>
+[img[pictures/lechem-tushiya.jpg]]
+
+
+!!![[Tomer]]:
+
+
+
+ &lt;&lt;heblink [[]]&gt;&gt;
 </pre>
 </div>
 <div created="20200219162401317" modified="20200219162549802" tags="[[Here in the Ghetto]] [[Coffee shops]] Restaurants Baking [[Food addicts]] Kitchens" title="Lehamim">
@@ -10651,13 +10680,13 @@ And tea is for the sicken ones.
  &lt;&lt;heblink [[מרק עם קניידלך]]&gt;&gt;
 </pre>
 </div>
-<div created="20200223150041518" modified="20200223165644606" tags="[[Here in the Ghetto]]" title="Max 20">
+<div created="20200223150041518" modified="20200223184015922" tags="[[Here in the Ghetto]]" title="Max 20">
 <pre>
 [img[pictures/max20.jpg]]
 
 !!![[Tomer]]:
 
-Max 20 at 147 Yehuda haLevi st is just like a private storeroom. I leave the building and walk up to haHashmonaim st, turn right, cross, walk down couple of steps, and I've  got anything I need at maximum 20 shekels.
+[[Max 20 at 147 Yehuda haLevi st|https://www.maxstock.co.il/%d7%a1%d7%a0%d7%99%d7%a4%d7%99%d7%9d/]] is just like a private storeroom. I leave the building and walk up to haHashmonaim st, turn right, cross, walk down couple of steps, and I've  got anything I need at maximum 20 shekels.
 
 
  &lt;&lt;heblink [[Max 20]]&gt;&gt;
@@ -11684,6 +11713,20 @@ The body updated. Photography indeed didn't become a hobby of mine, but I keep o
 
 
  &lt;&lt;heblink [[הגוף מתעדכן]]&gt;&gt;</pre>
+</div>
+<div created="20200223171155981" modified="20200223183337271" tags="Children [[On the road to somewhere]] [[Here in the Ghetto]] [[True stories]]" title="The boulevard on the way home">
+<pre>
+[img[pictures/basdera.jpg]]
+
+!!![[Tomer]]:
+
+After the [[bun|lechem-tushia Sheinkin]], after [[Shoretzky]], after [[Charlie|Siach Cafe]], we're back on the boulevard, we're going to turn right to haHashmonaim in a bit, and we'll get there.
+
+
+ &lt;&lt;heblink [[בשדרה בדרך הביתה]]&gt;&gt;
+
+
+</pre>
 </div>
 <div created="20200215105718382" modified="20200215121523220" tags="[[TV Series]] TV" title="The Bridge">
 <pre>[img[pictures/hagesher.jpg]]
