--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כאן בגטו]] בארבי [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200223162838081" title="$:/temp/search">
+<div created="20161023184814872" modified="20200223183253576" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9620,7 +9620,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200223163403088" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200223183701492" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -10642,12 +10642,12 @@ well,
 
 נאדיה היא אשת עסקים מזן ה-K. היא נראית מבוגרת, ומתלבשת מבוגר וחום (פוליאסטר וטרילין), מתהדרת ביושר, בידע והבנת העולם. נשואה ובוגדנית.</pre>
 </div>
-<div created="20180825155311148" modified="20200223163442411" tags="מוזיקה [[כאן בגטו]] [[מטא בדיון]]" title="בארבי">
+<div created="20180825155311148" modified="20200223184633689" tags="מוזיקה [[כאן בגטו]] [[מטא בדיון]]" title="בארבי">
 <pre>[img[pictures/barby.jpg]]
 
 !!![[תומר]]: 
 
-בשבת לפני שבוע לקחתי מונית [[לבארבי|https://www.barby.co.il/]] לראות את [[Jazz]] שהיא שכנתי האהובה, ובאמת עושר מוסיקלי היה [[בפסטיבל היפ הופ של ערב אחד|https://yuvalerel.com/2018/08/18/%d7%9e%d7%a1%d7%99%d7%91%d7%aa-%d7%94%d7%a9%d7%a7%d7%99%d7%a2%d7%94-%d7%a9%d7%9c-%d7%90%d7%9e%d7%a6%d7%a2-%d7%94%d7%9c%d7%99%d7%9c%d7%94/]]. (הקישור הזה לכתבה על הפסטיבל הכוללת גם קטעי וידאו לקוח [[מהבלוג של יובל אראל|https://yuvalerel.com/]], שאוהב ומתעד מוסיקה). ג'אז שהיא יסמין היקרה, הופיעה עם הרכב שנקרא שאזאמאט, אחלה חבורה של בחורים שמנגנים ושרים יפה וכיף. הם ניגנו איתה יפה מאד שיר שלה וקצת יותר מאוחר היא הופיעה עם השירים שלה מלווה בכוכב [[שי טרא ליטמן]]. היה מעולה.
+בשבת לפני שבוע לקחתי מונית [[לבארבי|https://www.barby.co.il/]] לראות את [[Jazz]] שהיא שכנתי האהובה, ובאמת עושר מוסיקלי היה [[בפסטיבל היפ הופ של ערב אחד|https://yuvalerel.com/2018/08/18/%d7%9e%d7%a1%d7%99%d7%91%d7%aa-%d7%94%d7%a9%d7%a7%d7%99%d7%a2%d7%94-%d7%a9%d7%9c-%d7%90%d7%9e%d7%a6%d7%a2-%d7%94%d7%9c%d7%99%d7%9c%d7%94/]]. (הקישור הזה לכתבה על הפסטיבל הכוללת גם קטעי וידאו לקוח [[מהבלוג של יובל אראל|https://yuvalerel.com/]], שאוהב ומתעד מוסיקה). ג'אז שהיא יסמין היקרה, הופיעה עם הרכב שנקרא [[שאזאמאט|https://www.youtube.com/watch?v=uWkQ_lFnKE4]], אחלה חבורה של בחורים שמנגנים ושרים יפה וכיף. הם ניגנו איתה יפה מאד שיר שלה וקצת יותר מאוחר היא הופיעה עם השירים שלה. היה מעולה.
 
 
 
@@ -10878,12 +10878,15 @@ Is where I want to be
 
 &lt;&lt;englink [[Bishvil Haprachim]]&gt;&gt;</pre>
 </div>
-<div created="20190308172649378" modified="20200208125322631" tags="[[כאן בגטו]] ילדים [[מטא בדיון]] [[סיפורים אמיתיים]] [[בדרך לאן שהוא]]" title="בשדרה בדרך הביתה">
+<div created="20190308172649378" modified="20200223171512751" tags="[[כאן בגטו]] ילדים [[מטא בדיון]] [[סיפורים אמיתיים]] [[בדרך לאן שהוא]]" title="בשדרה בדרך הביתה">
 <pre>[img[pictures/basdera.jpg]]
 
 !!![[תומר]]:
 
-אחרי [[הלחמניה|לחם תושיה שינקין]], אחרי [[שורצקי]], אחרי [[שרלי|שיח קפה]], אנחנו עולים חזרה לשדרה, תיכף נפנה ימינה לחשמונאים, והנה מגיעים.</pre>
+אחרי [[הלחמניה|לחם תושיה שינקין]], אחרי [[שורצקי]], אחרי [[שרלי|שיח קפה]], אנחנו עולים חזרה לשדרה, תיכף נפנה ימינה לחשמונאים, והנה מגיעים.
+
+
+&lt;&lt;englink [[The boulevard on the way home]]&gt;&gt;</pre>
 </div>
 <div created="20190227173320579" modified="20200219152008061" tags="[[כאן בגטו]] מסעדות [[מטא בדיון]] קפה [[בתי קפה]]" title="בתה וגריגה">
 <pre>[img[pictures/beta-ve-grega.jpg]]
@@ -14231,7 +14234,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[9-side-wishing-star]]&gt;&gt;</pre>
 </div>
-<div created="20191107114444294" modified="20200217151039536" tags="[[כאן בגטו]] מוזיקה [[מטא בדיון]] [[כמה שירים כבר אפשר להמציא בכלל]]" title="כולי עלמא">
+<div created="20191107114444294" modified="20200223171848876" tags="[[כאן בגטו]] מוזיקה [[מטא בדיון]] [[כמה שירים כבר אפשר להמציא בכלל]]" title="כולי עלמא">
 <pre>[img[pictures/kuli-alma.jpg]]
 
 !!![[תומר]]:
@@ -14240,7 +14243,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 
-</pre>
+&lt;&lt;englink [[Kuli Alma]]&gt;&gt;</pre>
 </div>
 <div created="20170425180523126" modified="20200215094600809" tags="[[בחוות החיות]]" title="כורתים עצים">
 <pre>[img[pictures/kortim-ezim.jpg]]
@@ -14689,12 +14692,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20190307134032762" modified="20190415192025847" tags="[[כאן בגטו]] [[מטא בדיון]] אפייה קפה" title="לחם תושיה שינקין">
+<div created="20190307134032762" modified="20200223183731550" tags="[[כאן בגטו]] [[מטא בדיון]] אפייה קפה" title="לחם תושיה שינקין">
 <pre>[img[pictures/lechem-tushiya.jpg]]
 
 !!![[תומר]]:
 
-אם אני הולך לקניות בשעות אחר הצהריים אז זה עם [[ננו המתוקה|ננו שלי ואני]], ואנחנו חייבים לעצור [[בשינקין 53|https://easy.co.il/page/22641812]], ולקנות לחמניה רכה ומתוקה לגרגרנית הקטנה, שאוהבת את הלחמניה וגם את החיוך שמקבל את פניה. גם אני אוהב את את החיוכים הטובים, ואת הלחמים הרכים והעדינים. לרוב אני קונה לחם חמניות או את לחם הכוסמין שיבולת שועל, ואפשר גם לקחת חצי כיכר!</pre>
+אם אני הולך לקניות בשעות אחר הצהריים אז זה עם [[ננו המתוקה|ננו שלי ואני]], ואנחנו חייבים לעצור [[בשינקין 53|https://easy.co.il/page/22641812]], ולקנות לחמניה רכה ומתוקה לגרגרנית הקטנה, שאוהבת את הלחמניה וגם את החיוך שמקבל את פניה. גם אני אוהב את את החיוכים הטובים, ואת הלחמים הרכים והעדינים. לרוב אני קונה לחם חמניות או את לחם הכוסמין שיבולת שועל, ואפשר גם לקחת חצי כיכר!
+
+
+
+&lt;&lt;englink [[lechem-tushia Sheinkin]]&gt;&gt;
+</pre>
 </div>
 <div created="20180713195240465" modified="20200219162511210" tags="[[כאן בגטו]] [[חיות אוכל]] אפייה קפה [[בתי קפה]] מטבחים" title="לחמים">
 <pre>[img[pictures/breads.jpg]]
