--- a/english.html
+++ b/english.html
@@ -287,6 +287,8 @@ Error message and password prompt
 
 <li>Assuming and Preserving</li>
 
+<li>Autarky</li>
+
 <li>Ayala Malach Pines</li>
 
 <li>Baking</li>
@@ -462,6 +464,8 @@ Error message and password prompt
 <li>Isadora Duncan</li>
 
 <li>James Gandolfini</li>
+
+<li>Jane Fonda</li>
 
 <li>Jazz</li>
 
@@ -8633,7 +8637,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200219132419310" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200223185420420" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200223190256872" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8642,7 +8646,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Beautiful Ahal]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Jane Fonda]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8662,7 +8666,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200223183231949" title="$:/temp/search">
+<div created="20161023184814872" modified="20200223190417674" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9053,6 +9057,17 @@ Arnon Chen is my dad, and undoubtedly he's a &quot;round character&quot;, even t
 '': In the animal farm'', the animals display faith.
 
  &lt;&lt;heblink [[מניחים ושומרים]]&gt;&gt;</pre>
+</div>
+<div created="20200223185647523" modified="20200223185852973" tags="[[Monkeys with car keys]]" title="Autarky">
+<pre>
+[img[pictures/hameshek-shelanoo.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[המשק האוטרקי שלנו]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20191113130654313" modified="20200212181621602" tags="[[Outer sisters]]" title="Ayala Malach Pines">
 <pre>[img[pictures/ayala-malach-pines.jpg]]
@@ -9753,7 +9768,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200223183627180" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200223190627110" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -9914,7 +9929,7 @@ She's one of the lucky fellows who were raised together in a group, who came fro
 
 </pre>
 </div>
-<div created="20200202161830591" modified="20200222180701116" tags="[[Coen sister]] Laundry [[The Baumans]] [[The archive's trustees]]" title="Gura">
+<div created="20200202161830591" modified="20200223190436486" tags="[[Coen sister]] Laundry [[The Baumans]] [[The archive's trustees]] [[Iry and Gura]]" title="Gura">
 <pre>[img[pictures/VOYeMadgknrTKN6D.jpg]]
 
 !!![[Yoyo]]:
@@ -10250,7 +10265,7 @@ Iris, the daughter of [[Eva]], is a glowing girl. She glows through the darkness
 
  &lt;&lt;heblink [[איריס הבת]]&gt;&gt;</pre>
 </div>
-<div created="20200202163025535" modified="20200219193356566" tags="[[Coen sister]]" title="Iry">
+<div created="20200202163025535" modified="20200223190254675" tags="[[Coen sister]] [[Iry and Gura]] [[Iry claims]] [[The archive's trustees]]" title="Iry">
 <pre>[img[pictures/iri.jpg]]
 
 
@@ -10259,7 +10274,7 @@ Iris, the daughter of [[Eva]], is a glowing girl. She glows through the darkness
 
 Iry is the soul of the world, and even though or thank to me being high right now in the best possible way, I can write like that about Iry. The Coen Sisters are one by one marvelous, and in spite of and even though that at another moment I could write the exact same words about somebody else, I'm writing them now on Iry, the soul of the world and also the world's champion.
 
-Yesterday I went with her just to walk around the city, and today we're sitting all day in the house, chewing ourselves to death . Maybe because I've skipped my twenties, it's pleasant to experience them now with the ageless group, from the aspect of always being together. There is always someone in the apartment, and that's very helpful [[When you're down and troubled|https://www.youtube.com/watch?v=xEkIou3WFnM]]
+Yesterday I went with her just to walk around the city, and today we're sitting all day in the house, chewing ourselves to death . Maybe because I've skipped my twenties, it's pleasant to experience them now with the ageless group, from the aspect of always being together. [[There is always someone in the apartment|Autarky]], and that's very helpful [[When you're down and troubled|https://www.youtube.com/watch?v=xEkIou3WFnM]]
 
 I look at her now. She's making us toasts, I've tried to help her but she asked to do it [[on her own|Iry claims]]. She moves silently, erect, like a monk in a western kitchen kata. Walking towards the refrigerator and returning to the working space. Concently cutting the vegetables, and putting them on the bread slices, which she has cut the edges off. She is offering me a fresh pineapple and rum cocktail. She makes it in the blender with ice. After the cocktail are ready she's taking the toasts out and putting them on the counter. We're sitting on the counter, eating and drinking. I'm asking her about her [[Alexander|Alexander Technique]] and she's telling me. I feel how my body getting lengthener and wider as she's speaking. We're drinking and eating and she's speaking and moving completely serious with a smile. She's making another cocktail in the blender. This time she's adding lemon juice. While making the cocktail and cleaning the sink and the dishes, she keeps telling me how she thinking Alexander right now while talking to me. Letting the neck be free. [[&quot;When the movements are executed from thinking of letting go of the neck&quot;|Spiral Spring]] she's telling me &quot;they come out more rightly from the body&quot;.
 
@@ -10324,6 +10339,19 @@ The beloved [[James Gandolfini|https://www.imdb.com/name/nm0001254/]], who gave 
 
  &lt;&lt;heblink [[ג'יימס גנדולפיני]]&gt;&gt;
 
+
+</pre>
+</div>
+<div created="20200223190516303" modified="20200223190831707" tags="[[Menopause sisters]] [[Outer sisters]] Films" title="Jane Fonda">
+<pre>
+
+[img[pictures/jane-fonda.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[ג'יין פונדה]]&gt;&gt;
 
 </pre>
 </div>
