--- a/index.html
+++ b/index.html
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200223183253576" title="$:/temp/search">
+<div created="20161023184814872" modified="20200223190533629" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9620,7 +9620,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200223183701492" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200223190719572" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -10267,7 +10267,7 @@ well,
 
 &lt;&lt;englink [[Mothers]]&gt;&gt;</pre>
 </div>
-<div created="20161206200127567" modified="20200202164349033" tags="[[אחות כהן]]" title="אירי">
+<div created="20161206200127567" modified="20200223190155609" tags="[[אחות כהן]] [[אירי וגורה]] [[אירי טוענת]] [[מחפשת את אירי]] [[נאמני הגנזך]]" title="אירי">
 <pre>[img[pictures/iri.jpg]]
 
 !!![[אלפרד]]:
@@ -11017,7 +11017,7 @@ Is where I want to be
 &lt;&lt;englink [[James Gandolfini]]&gt;&gt;
 </pre>
 </div>
-<div created="20181003131016162" modified="20190126102054297" tags="[[האחיות בלות]] [[אחיות חוץ]] סרטים" title="ג'יין פונדה">
+<div created="20181003131016162" modified="20200223190813418" tags="[[האחיות בלות]] [[אחיות חוץ]] סרטים" title="ג'יין פונדה">
 <pre>[img[pictures/jane-fonda.jpg]]
 
 !!![[אווה]]:
@@ -11031,7 +11031,10 @@ Is where I want to be
 //אני שמחה שאני נראית טוב לגילי, אבל גם עברתי ניתוחים פלסטיים, אני לא אשקר באשר לכך. מצד אחד אני שונאת את העובדה שהייתי צריכה לשנות את עצמי פיזית כדי להרגיש שאני בסדר, הלואי ולא הייתי כזו. אני אוהבת פנים מבוגרים, אוהבת את הפנים של ונסה רדגרייב, הלואי והייתי אמיצה יותר, אך אני מי שאני.//
 
 
-[[מהתמונה הזו|https://www.biography.com/.image/ar_1:1%2Cc_fill%2Ccs_srgb%2Cg_face%2Cq_auto:good%2Cw_300/MTU1MTA5MjA5NjczODM1ODg2/photo-by-tibrina-hobson-getty-images-square.jpg]] ציירה גורה את ג'יין.</pre>
+[[מהתמונה הזו|https://www.biography.com/.image/ar_1:1%2Cc_fill%2Ccs_srgb%2Cg_face%2Cq_auto:good%2Cw_300/MTU1MTA5MjA5NjczODM1ODg2/photo-by-tibrina-hobson-getty-images-square.jpg]] ציירה גורה את ג'יין.
+
+
+&lt;&lt;englink [[Jane Fonda]]&gt;&gt;</pre>
 </div>
 <div created="20171212163308820" modified="20200216163153523" tags="[[אחיות חוץ]] סרטים" title="ג'ף ברידג'ס">
 <pre>[img[pictures/jeff-bridges.jpg]]
@@ -11113,7 +11116,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20161026214951927" modified="20200215174424616" tags="[[נאמני הגנזך]] [[אחות כהן]] [[משפחת באומן]] כביסה" title="גורה">
+<div created="20161026214951927" modified="20200223190355833" tags="[[נאמני הגנזך]] [[אחות כהן]] [[משפחת באומן]] כביסה [[אירי וגורה]] [[מחפשת את אירי]]" title="גורה">
 <pre>[img[pictures/VOYeMadgknrTKN6D.jpg]]
 
 !!![[יויו]]:
@@ -12640,7 +12643,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 ([[cc|https://creativecommons.org/licenses/by-nc-sa/2.0/]]) [[Timo Heuer|https://www.flickr.com/photos/upim/3363312260]]
 @@</pre>
 </div>
-<div created="20161218221618167" modified="20170622203353434" title="המשק האוטרקי שלנו">
+<div created="20161218221618167" modified="20200223185943876" tags="[[קופים ממונעים]]" title="המשק האוטרקי שלנו">
 <pre>[img[pictures/hameshek-shelanoo.jpg]]
 
 !!![[אלפרד]]:
@@ -12652,7 +12655,8 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 ואלה, לפני שמניתי, את היכולת לשפץ דירות, לשפץ רהיטים, [[לבשל|שניצל]], לאפות,יש לנו את המסעדה, יש לנו מטפלים בכמה אלטרנטיבות ועד כדי כדורים פסיכיאטריים.יש לנו פובליציסט, יש לנו עורך סאונד, אנחנו יודעים לערוך וידאו, יש לנו כותבות, ותמיד יש צנצנת עם דובוני גומי.
 
 
-</pre>
+
+&lt;&lt;englink [[Autarky]]&gt;&gt;</pre>
 </div>
 <div created="20170508180956582" modified="20170508225633583" title="הנה, כך">
 <pre>[img[pictures/hine-kach.jpg]]
