--- a/english.html
+++ b/english.html
@@ -8646,7 +8646,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Jane Fonda]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[lechem-tushia Sheinkin]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10523,7 +10523,7 @@ Another [[neighborhood luck|https://www.google.co.il/maps/uv?hl=iw&amp;pb=!1s0x1
  &lt;&lt;heblink [[לורין היל]]&gt;&gt;
 </pre>
 </div>
-<div created="20200223182814598" modified="20200223183751405" tags="[[Here in the Ghetto]] Coffee Baking Metafiction" title="lechem-tushia Sheinkin">
+<div created="20200223182814598" modified="20200223191942639" tags="[[Here in the Ghetto]] Coffee Baking Metafiction" title="lechem-tushia Sheinkin">
 <pre>
 [img[pictures/lechem-tushiya.jpg]]
 
@@ -10532,7 +10532,7 @@ Another [[neighborhood luck|https://www.google.co.il/maps/uv?hl=iw&amp;pb=!1s0x1
 
 
 
- &lt;&lt;heblink [[]]&gt;&gt;
+ &lt;&lt;heblink [[לחם תושיה שינקין]]&gt;&gt;
 </pre>
 </div>
 <div created="20200219162401317" modified="20200219162549802" tags="[[Here in the Ghetto]] [[Coffee shops]] Restaurants Baking [[Food addicts]] Kitchens" title="Lehamim">
