--- a/english.html
+++ b/english.html
@@ -8646,7 +8646,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[lechem-tushia Sheinkin]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[David Byrne]] [[lechem-tushia Sheinkin]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8666,7 +8666,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200223190417674" title="$:/temp/search">
+<div created="20161023184814872" modified="20200223194636286" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9588,7 +9588,7 @@ She was four-year-old when I was born, and shortly after my birth, my parents no
 
 </pre>
 </div>
-<div created="20200213152525438" modified="20200216163832161" tags="Music Films [[Outer sisters]]" title="David Byrne">
+<div created="20200213152525438" modified="20200223194654800" tags="Music Films [[Outer sisters]]" title="David Byrne">
 <pre>[img[pictures/david-byrne.jpg]]
 
 
@@ -9596,7 +9596,7 @@ She was four-year-old when I was born, and shortly after my birth, my parents no
 
 [[Look at him|https://www.youtube.com/watch?v=hpPYKJAnwUo]], not a child anymore, but still [[the same kid|https://www.youtube.com/watch?v=av3j4WStj2A]].
 
-This is [[David Byrne|http://davidbyrne.com/]].
+This is [[Sweet David Byrne|http://davidbyrne.com/]].
 
 
 
