--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[דיוויד ביירן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200223190533629" title="$:/temp/search">
+<div created="20161023184814872" modified="20200223194720478" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11905,14 +11905,14 @@ Is where I want to be
 
 &lt;&lt;englink [[David Bowie]]&gt;&gt;</pre>
 </div>
-<div created="20180123164835249" modified="20200213163112242" tags="[[אחיות חוץ]] מוזיקה סרטים" title="דיוויד ביירן">
+<div created="20180123164835249" modified="20200223194735817" tags="[[אחיות חוץ]] מוזיקה סרטים" title="דיוויד ביירן">
 <pre>[img[pictures/david-byrne.jpg]]
 
 !!![[יויו]]:
 
 [[תראו אותו|https://www.youtube.com/watch?v=hpPYKJAnwUo]], כבר לא ילד, אבל [[אותו הילד|https://www.youtube.com/watch?v=av3j4WStj2A]].
 
-זה [[דיוויד ביירן|http://davidbyrne.com/]].
+זה [[דיוויד ביירן המתוק|http://davidbyrne.com/]].
 
 &lt;&lt;englink [[David Byrne]]&gt;&gt;</pre>
 </div>
