--- a/english.html
+++ b/english.html
@@ -423,6 +423,8 @@ Error message and password prompt
 
 <li>Harry Dean Stanton</li>
 
+<li>Haruki Murakami</li>
+
 <li>Here in the Ghetto</li>
 
 <li>HH</li>
@@ -536,6 +538,8 @@ Error message and password prompt
 <li>Metafiction</li>
 
 <li>Michel Gondry</li>
+
+<li>Mike Leigh</li>
 
 <li>Misenplation</li>
 
@@ -8646,7 +8650,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[David Byrne]] [[lechem-tushia Sheinkin]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8912,8 +8916,7 @@ In fact, when it comes to women I kinda dig the word woman.
  &lt;&lt;heblink [[גבר פריבילגי]]&gt;&gt;</pre>
 </div>
 <div created="20200223152720731" modified="20200223185023384" tags="[[Here in the Ghetto]]" title="Abraham Hostel">
-<pre>
-[img[pictures/abraham-hostel.jpg]]
+<pre>[img[pictures/abraham-hostel.jpg]]
 
 !!![[Tomer]]:
 
@@ -8934,8 +8937,7 @@ Two weeks before, my lovely wife bought for her and me tickets to a [[Kutiman|ht
 </pre>
 </div>
 <div created="20200223161655299" modified="20200223162925629" tags="[[Here in the Ghetto]] Restaurants Kitchens [[Food addicts]]" title="Acram Hummus">
-<pre>
-[img[pictures/acram-humus.jpg]]
+<pre>[img[pictures/acram-humus.jpg]]
 
 !!![[Tomer]]:
 
@@ -9059,8 +9061,7 @@ Arnon Chen is my dad, and undoubtedly he's a &quot;round character&quot;, even t
  &lt;&lt;heblink [[מניחים ושומרים]]&gt;&gt;</pre>
 </div>
 <div created="20200223185647523" modified="20200223185852973" tags="[[Monkeys with car keys]]" title="Autarky">
-<pre>
-[img[pictures/hameshek-shelanoo.jpg]]
+<pre>[img[pictures/hameshek-shelanoo.jpg]]
 
 
 
@@ -9092,8 +9093,7 @@ A [[soul]] was born by her inspiration. May she rest in peace.
  &lt;&lt;heblink [[אפייה]]&gt;&gt;</pre>
 </div>
 <div created="20200223163123340" modified="20200223184607859" tags="[[Here in the Ghetto]] Music Metafiction" title="Barby">
-<pre>
-[img[pictures/barby.jpg]]
+<pre>[img[pictures/barby.jpg]]
 
 
 !!![[Tomer]]:
@@ -9109,8 +9109,7 @@ A week ago on Saturday I took a taxi to the [[Barby|https://www.barby.co.il/]] t
 </pre>
 </div>
 <div created="20200223155132460" modified="20200223185424389" tags="[[Here in the Ghetto]] Music [[Outer sisters]] Metafiction" title="Beautiful Ahal">
-<pre>
-[img[pictures/ahal-eden.jpg]]
+<pre>[img[pictures/ahal-eden.jpg]]
 
 !!![[Tomer]]:
 
@@ -9768,7 +9767,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200223190627110" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200225165053958" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -10055,6 +10054,15 @@ Here in the picture are Hanna my mother and I, few months before she passed away
  &lt;&lt;heblink [[הארי דין סטנטון]]&gt;&gt;
 </pre>
 </div>
+<div created="20200225165007413" modified="20200225165121233" tags="[[Outer sisters]]" title="Haruki Murakami">
+<pre>
+
+[img[pictures/haruki-murakami.jpg]]
+
+
+
+ &lt;&lt;heblink [[הרוקי מורקמי]]&gt;&gt;</pre>
+</div>
 <div created="20200212164615918" modified="20200219150430746" tags="Metafiction [[Outer sisters]] [[The global village]]" title="Here in the Ghetto">
 <pre>[img[pictures/here-in-the-ghetto.jpg]]
 
@@ -10225,8 +10233,7 @@ Yes you- killing machines, exterminating and cancelling all that's not in your f
 </pre>
 </div>
 <div created="20200220174310066" modified="20200220174845695" tags="[[The kitchen by Genevieve]] Coffee Baking" title="In the morning">
-<pre>
-[img[pictures/genevieve-aruchat-boker.jpg]]
+<pre>[img[pictures/genevieve-aruchat-boker.jpg]]
 
 
 
@@ -10344,7 +10351,6 @@ The beloved [[James Gandolfini|https://www.imdb.com/name/nm0001254/]], who gave 
 </div>
 <div created="20200223190516303" modified="20200223190831707" tags="[[Menopause sisters]] [[Outer sisters]] Films" title="Jane Fonda">
 <pre>
-
 [img[pictures/jane-fonda.jpg]]
 
 
@@ -10494,8 +10500,7 @@ Another [[neighborhood luck|https://www.google.co.il/maps/uv?hl=iw&amp;pb=!1s0x1
 </pre>
 </div>
 <div created="20200223171627777" modified="20200223171918534" tags="[[Here in the Ghetto]] [[How many songs can you even invent at all]] Metafiction Music" title="Kuli Alma">
-<pre>
-[img[pictures/kuli-alma.jpg]]
+<pre>[img[pictures/kuli-alma.jpg]]
 
 
 
@@ -10524,8 +10529,7 @@ Another [[neighborhood luck|https://www.google.co.il/maps/uv?hl=iw&amp;pb=!1s0x1
 </pre>
 </div>
 <div created="20200223182814598" modified="20200223191942639" tags="[[Here in the Ghetto]] Coffee Baking Metafiction" title="lechem-tushia Sheinkin">
-<pre>
-[img[pictures/lechem-tushiya.jpg]]
+<pre>[img[pictures/lechem-tushiya.jpg]]
 
 
 !!![[Tomer]]:
@@ -10559,8 +10563,7 @@ Another [[neighborhood luck|https://www.google.co.il/maps/uv?hl=iw&amp;pb=!1s0x1
 </pre>
 </div>
 <div created="20200220173518816" modified="20200220174159196" tags="Films [[Monkeys with car keys]]" title="Lemons">
-<pre>
-[img[pictures/lemons.jpg]]
+<pre>[img[pictures/lemons.jpg]]
 
 
 !!![[Gura]]:
@@ -10709,8 +10712,7 @@ And tea is for the sicken ones.
 </pre>
 </div>
 <div created="20200223150041518" modified="20200223184015922" tags="[[Here in the Ghetto]]" title="Max 20">
-<pre>
-[img[pictures/max20.jpg]]
+<pre>[img[pictures/max20.jpg]]
 
 !!![[Tomer]]:
 
@@ -10721,8 +10723,7 @@ And tea is for the sicken ones.
 </pre>
 </div>
 <div created="20200222180211144" modified="20200222180600494" tags="[[I would like to apologize]] Laundry [[Dandan went]] [[True stories]]" title="Me writing">
-<pre>
-[img[pictures/dAslRkCtpSF1J4AA.jpg]]
+<pre>[img[pictures/dAslRkCtpSF1J4AA.jpg]]
 
 
 !!![[Gura]]:
@@ -10818,6 +10819,15 @@ I watched T[[HE SCIENCE OF SLEEP|https://www.imdb.com/title/tt0354899/]] and fel
 
  &lt;&lt;heblink [[מישל גונדרי]]&gt;&gt;
 
+</pre>
+</div>
+<div created="20200225164430104" modified="20200225164701988" tags="[[Outer sisters]] Films" title="Mike Leigh">
+<pre>
+[img[pictures/mike-leigh.jpg]]
+
+
+
+ &lt;&lt;heblink [[מייק לי]]&gt;&gt;
 </pre>
 </div>
 <div created="20200217134428443" modified="20200219133440077" tags="Kitchens [[Monkeys with car keys]] Laundry [[The kitchen by Genevieve]]" title="Misenplation">
@@ -11126,8 +11136,7 @@ I’ve tried to paint Pedro Almodóva from [[this photo|https://www.indiewire.co
 </pre>
 </div>
 <div created="20200223145445131" modified="20200223145651152" tags="Music [[Here in the Ghetto]] [[Outer sisters]]" title="Pele Ozen">
-<pre>
-[img[pictures/pele-ozen.jpg]]
+<pre>[img[pictures/pele-ozen.jpg]]
 
 
 
@@ -11743,8 +11752,7 @@ The body updated. Photography indeed didn't become a hobby of mine, but I keep o
  &lt;&lt;heblink [[הגוף מתעדכן]]&gt;&gt;</pre>
 </div>
 <div created="20200223171155981" modified="20200223183337271" tags="Children [[On the road to somewhere]] [[Here in the Ghetto]] [[True stories]]" title="The boulevard on the way home">
-<pre>
-[img[pictures/basdera.jpg]]
+<pre>[img[pictures/basdera.jpg]]
 
 !!![[Tomer]]:
 
@@ -11991,8 +11999,7 @@ When they talked about his mother- who demanded his extermination- [[Dr. Melfi|h
 </pre>
 </div>
 <div created="20200202164120005" modified="20200220172230172" tags="[[Coen sister]] [[The archive's trustees]] [[Food addicts]]" title="The team">
-<pre>
-[img[pictures/hazevet.jpg]]
+<pre>[img[pictures/hazevet.jpg]]
 
 
 The team is us, who live in the renovated rental contract [[apartment|the wishing star 01]], meaning [[Yoyo]], [[Iry]] and [[Gura]], that in our leisure hours we bake, cook and also write the recipes.
