--- a/english.html
+++ b/english.html
@@ -715,6 +715,8 @@ Error message and password prompt
 
 <li>The lab</li>
 
+<li>The real Dod</li>
+
 <li>The right hand doesn't know</li>
 
 <li>The sisters' questionnaire</li>
@@ -9767,7 +9769,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200225165053958" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200225165542341" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -11955,6 +11957,16 @@ Because, it's not that bad if a little bit of fruit sauce get spilled on the mea
 
 
  &lt;&lt;heblink [[המעבדה]]&gt;&gt;
+</pre>
+</div>
+<div created="20200225165427271" modified="20200225165740497" tags="[[Outer sisters]] Music Metafiction" title="The real Dod">
+<pre>
+[img[pictures/hadod-haamiti.jpg]]
+
+
+
+ &lt;&lt;heblink [[הדוד האמיתי]]&gt;&gt;
+
 </pre>
 </div>
 <div created="20200215093007979" modified="20200215093300983" tags="[[In the Animal Farm]]" title="The right hand doesn't know">
