--- a/index.html
+++ b/index.html
@@ -9620,7 +9620,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200225165158190" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200225165632428" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -12270,14 +12270,16 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170505224151892" modified="20180208153812859" tags="[[אחיות חוץ]] מוזיקה" title="הדוד האמיתי">
+<div created="20170505224151892" modified="20200225165716537" tags="[[אחיות חוץ]] מוזיקה [[מטא בדיון]]" title="הדוד האמיתי">
 <pre>[img[pictures/hadod-haamiti.jpg]]
 
 !!![[יויו]]:
 
 כש[[הדוד|https://thedod.github.io#עברית]], שכדאי מאד להקשיב למה שיש לו להגיד, הגיע אלינו, די מהר, הכל התחיל להסתדר במקום. 
 
-</pre>
+
+
+&lt;&lt;englink [[The real Dod]]&gt;&gt;</pre>
 </div>
 <div created="20190105112836262" modified="20200215152038228" tags="[[סיפורים אמיתיים]] [[כאן בגטו]]" title="הדשא">
 <pre>[img[pictures/hadeshe.jpg]]
