--- a/english.html
+++ b/english.html
@@ -321,6 +321,8 @@ Error message and password prompt
 
 <li>Charlie Kaufman</li>
 
+<li>Chava Alberstein</li>
+
 <li>Cheng</li>
 
 <li>Chez Finnie`s</li>
@@ -788,6 +790,8 @@ Error message and password prompt
 <li>Yehonatan Geffen</li>
 
 <li>Yehudit Ravitz</li>
+
+<li>Yoni Rechter</li>
 
 <li>Yoyo</li>
 
@@ -9313,6 +9317,16 @@ My admired [[screenwriter and director|https://en.wikipedia.org/wiki/Charlie_Kau
  &lt;&lt;heblink [[צ'רלי קאופמן]]&gt;&gt;
 . </pre>
 </div>
+<div created="20200225170224847" modified="20200225170400497" tags="[[Outer sisters]] Music [[How many songs can you even invent at all]]" title="Chava Alberstein">
+<pre>
+[img[pictures/chava-alberstein.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[חוה אלברשטיין]]&gt;&gt;
+</pre>
+</div>
 <div created="20200215210946983" modified="20200215211037832" tags="[[Coen sister]]" title="Cheng">
 <pre>[img[pictures/chang.jpg]]
 
@@ -9769,7 +9783,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200225165542341" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200225170703194" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -12386,6 +12400,15 @@ Today on the street, this [[permanently|https://www.youtube.com/watch?v=lt_C-vcD
 
 
  &lt;&lt;heblink [[יהודית רביץ]]&gt;&gt;</pre>
+</div>
+<div created="20200225170618277" modified="20200225170733105" tags="[[Outer sisters]] Music [[How many songs can you even invent at all]]" title="Yoni Rechter">
+<pre>
+[img[pictures/yoni-rechter.jpg]]
+
+
+
+ &lt;&lt;heblink [[יוני רכטר]]&gt;&gt;
+</pre>
 </div>
 <div created="20200101132642919" modified="20200219124006769" tags="" title="Yoyo">
 <pre>[img[pictures/yoyo.jpg]]
